--- a/assets/css/custom_landing.css
+++ b/assets/css/custom_landing.css
@@ -58,7 +58,7 @@ nav#mainNav .container{
     max-width: 100%;
 }
 .btnAcceder{
-    background-color: #A5BABE;
+    background-color: #01498d;
     border-radius: 40px;
     padding: 5px 20px 5px 20px!important;
     font-size: 16px!important;
